feat: rabbitmq implementation & update company
